@@ -1,0 +1,2 @@
+wear knfo
+quit
